--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
+    "react-uploader": "^3.43.0"
   }
 }
